# advent-of-code

./: .gitignore  README.md
legacy/: LICENSE  README.md  pyproject.toml
legacy/solutions/y2015/: solution_2015_1.py  solution_2015_10.py  solution_2015_11.py  solution_2015_12.py  solution_2015_13.py  solution_2015_14.py  solution_2015_2.py  solution_2015_3.py  solution_2015_4.py  solution_2015_5.py  solution_2015_6.py  solution_2015_7.py  solution_2015_8.py  solution_2015_9.py
legacy/solutions/y2016/: solution_2016_1.py  solution_2016_10.py  solution_2016_12.py  solution_2016_14.py  solution_2016_2.py  solution_2016_3.py  solution_2016_4.py  solution_2016_5.py  solution_2016_6.py  solution_2016_7.py  solution_2016_8.py  solution_2016_9.py
legacy/solutions/y2017/: solution_2017_1.py  solution_2017_10.py  solution_2017_11.py  solution_2017_12.py  solution_2017_13.py  solution_2017_14.py  solution_2017_15.py  solution_2017_16.py  solution_2017_17.py  solution_2017_18.py  solution_2017_19.py  solution_2017_2.py  solution_2017_20.py  solution_2017_21.py  solution_2017_22.py  solution_2017_23.py  solution_2017_24.py  solution_2017_25.py  solution_2017_3.py  solution_2017_4.py  solution_2017_5.py  solution_2017_6.py  solution_2017_7.py  solution_2017_8.py  solution_2017_9.py
legacy/solutions/y2018/: solution_2018_1.py  solution_2018_10.py  solution_2018_11.py  solution_2018_12.py  solution_2018_14.py  solution_2018_16.py  solution_2018_2.py  solution_2018_3.py  solution_2018_4.py  solution_2018_5.py  solution_2018_6.py  (+3 more)
legacy/tests/: conftest.py  test_helper.py
(+169 files in other folders)
