[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Joseph Gruber <joseph.gruber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
regex = "^2022.10.31"
Pillow = "^10.1.0"
numpy = "^1.26.2"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
flake8 = "^6.1.0"
bandit = "^1.7.5"
black = "^23.11.0"
mypy = "^1.7.1"
pylint-quotes = "^0.2.3"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
isort = "^5.12.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--numprocesses=10"
]

[tool.mypy]
pretty = true
show_error_codes = true
check_untyped_defs = true
show_traceback = true
show_error_context = true
